kubernetes/mariadb-galera/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-galera-headless
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: galera
      port: 4567
      targetPort: galera
    - name: ist
      port: 4568
      targetPort: ist
    - name: sst
      port: 4444
      targetPort: sst
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-galera-metrics
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
  annotations:
    prometheus.io/port: "9104"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9104
      targetPort: metrics
  selector:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-galera
  namespace: mariadb-galera
  labels:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/instance: mariadb-galera
